--- a/11_tetel.tex
+++ b/11_tetel.tex
@@ -22,11 +22,11 @@
 REGULÁRIS GRÁF Definíció: Egy gráfot \textbf{$k$-regulárisnak} nevezünk, ha minden pont foka $k$. Egy gráfra azt mondjuk, hogy \textbf{reguláris}, ha létezik olyan k, amire k-reguláris.
 \end{shaded}
 \begin{framed}
-REGULÁRIS GRÁFBAN TELJES PÁROSÍTÁS Definíció: Minden reguláris páros gráfban létezik teljes párosítás.
+REGULÁRIS GRÁFBAN TELJES PÁROSÍTÁS Tétel: Minden reguláris páros gráfban létezik teljes párosítás.
 \end{framed}
 \begin{leftbar}
 Bizonyítás:
-Vegyünk egy páros gráfot A, B pontosztállyal, ami k-reguláris. Először lássuk be, hogy ugyanaz az elemszáma A és B-nek. A-ból $k\cdot n$ él megy ki, B-be pedig $k \cdot m$ él megy. $k\cdot n = k\cdot m$, osszuk le k-val $\rightarrow n = m$. Hall-feltétel: $|N(A) \geq |A|$. A-ból $k\cdot|A|$ él megy ki, ezek a N(A) csúcsokba mennek. Ez annyit jelent, hogy egy N(A)-beli csúcsba átlagosan $(k\cdot |A|) \backslash |N(A)|$ él megy, tehát $(k\cdot |A|) \backslash |N(A)| \leq k$ (mivel egy csúcsba maximum k él megy). Szorozzuk be $|N(A|$-val és osszunk k-val. $|A| \leq |N(A)|$, Hall feltétel OK, Frobenius-tétel OK, létezik teljes párosítás.
+Vegyünk egy páros gráfot A, B pontosztállyal, ami k-reguláris. Először lássuk be, hogy ugyanaz az elemszáma A és B-nek. A-ból $k\cdot n$ él megy ki, B-be pedig $k \cdot m$ él megy. $k\cdot n = k\cdot m$, osszuk le k-val $\rightarrow n = m$. Hall-feltétel: $|N(A)| \geq |A|$. A-ból $k\cdot|A|$ él megy ki, ezek a N(A) csúcsokba mennek. Ez annyit jelent, hogy egy N(A)-beli csúcsba átlagosan $(k\cdot |A|) \backslash |N(A)|$ él megy, tehát $(k\cdot |A|) \backslash |N(A)| \leq k$ (mivel egy csúcsba maximum k él megy). Szorozzuk be $|N(A|$-val és osszunk k-val. $|A| \leq |N(A)|$, Hall feltétel OK, Frobenius-tétel OK, létezik teljes párosítás.
 %Tegyük fel, hogy G k-reguláris és rendelkezik A, B pontosztályokkal és $k \geq 1$, és tekintsünk tetszőleges $X \subseteq A$ ponthalmazt. Mivel X-beli pontokból összesen $|X|\cdot k$ darab él indul ki, és N(X) minden pontjába ezek közül legfeljebb k fut be, ezért
 %$$|N(X)| \geq \frac{1}{k}k|X| = |X|$$
 %Az $X = A$ esetre ugyanezzel a módszerrel $|A| = |B|$, mert $N(A) = B$ és így az A-beli pontokból kiinduló élekből N(A) minden pontjába pontosan k él fut be. Ebből Frobenius tétellel kijön a teljes párosítás.
@@ -47,7 +47,8 @@ Bizonyítás: Az egy csúcsból induló élek egymástól különböző színt k
 KŐNIG-TÉTEL Tétel: Ha G páros gráf, akkor $\chi_e(G) = \Delta(G)$
 \end{framed}
 \begin{leftbar}
-Bizonyítás: Elég azt igazolni, hogy $\chi_e(G) \leq \Delta(G)$ az előző állítás miatt. Létezik olyan H páros gráf, melynek G részgráfja, és H minden csúcsának fokszáma $\Delta(G)$. Ha sikerül a $\Delta(G)$-reguláris H gráf éleit $\Delta(G)$ színnel kiszínezni, akkor egyúttal a G részgráf éleinek is megkapjuk egy ugyanennyi színnel való színezését. H gráf élszínezéséhez elegendő azt megmutatni, hogy tetszőleges reguláris páros gráfban létezik teljes párosítás, ezt pedig már bizonyítottuk egy fentebbi tételben.
+Bizonyítás: Elég azt igazolni, hogy $\chi_e(G) \leq \Delta(G)$ az előző állítás miatt. Létezik olyan H páros gráf, melynek G részgráfja, és H minden csúcsának fokszáma $\Delta(G)$. Ha sikerül a $\Delta(G)$-reguláris H gráf éleit $\Delta(G)$ színnel kiszínezni, akkor egyúttal a G részgráf éleinek is megkapjuk egy ugyanennyi színnel való színezését. H gráf élszínezéséhez elegendő azt megmutatni, hogy tetszőleges reguláris páros gráfban létezik teljes párosítás, ezt pedig már bizonyítottuk egy fentebbi tételben. Ugyanis akkor H egy teljes párosítását kiszínezve az első színnel, a színezetlen élek
+egy $(\Delta(G) − 1)$-reguláris páros gráfot alkotnak, abban is találunk teljes párosítást, ez a második színt kapja, és így tovább.
 \end{leftbar}
 
 \end{document}
