--- a/06_tetel.tex
+++ b/06_tetel.tex
@@ -48,8 +48,8 @@ ELÉGSÉGES FELTÉTEL - ORE TÉTEL Tétel: Ha az n pontú G egyszerű gráfban m
 \begin{leftbar}
 Indirekt t.f.h. a gráf kielégíti a feltételt, de nincs benne H-kör. Vegyünk hozzá a gráfhoz éleket úgy, hogy továbbra se legyen benne H-kör. Ezt egészen addig csináljuk, amíg már akárhogyan is veszünk hozzá egy élet, lesz a gráfban H-kör. Az így kapott G' gráfra továbbra is teljesül a feltétel, hiszen új élek behúzásával "rossz pontpárt" nem lehet létrehozni. Biztosan van két olyan pont, hogy ${x,y} \not \in E(G')$. Ennek a behúzásával már lesz $G' + {x,y}$-ban H-kör, tehát G'-ben van H-út. Legyen ez $P = {z_1, z_2,...,z_n}$ ahol $z_1 = x$ és $z_n = y$.
 Ha x szomszédos a P út valamely $z_k$ pontjával, akkor y nem lehet összekötve $z_{k-1}$-el, mert akkor az egy H-kört adna. Így tehát y nem lehet összekötve legalább d(x) ponttal, ezért
-$$d(y) \leq n - 1 - d(x)$$
-ami viszont ellentmondás, hisz ${x,y} \not\in E(G)$.
+$$d(y) \leq n - 1 - d(x) \text{ azaz } d(x)+d(y) \leq n-1$$
+ami viszont ellentmondás, hiszen feltettük, hogy $d(x)+d(y) \geq n$.
 \end{leftbar}
 \begin{framed}
 ELÉGSÉGES FELTÉTEL - DIRAC TÉTEL Tétel: Ha egy n pontú G egyszerű gráfban minden pont foka legalább n/2, akkor a gráfban létezik H-kör.
